cover alignment fixed at h1

--- a/style.css
+++ b/style.css
@@ -174,6 +174,8 @@ main .banner img {
 }
 
 main .banner .cover {
+
+    background-color: red;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -205,6 +207,7 @@ main .banner .cover {
     color: var(--font-color-primary);
     font-size: var(--fs-heading);
     line-height: 2.5rem;
+    text-align: center;
     
     margin-bottom: 2rem;
 }
@@ -774,7 +777,6 @@ footer .powered {
     };
 
     .send .button{
-        background-color: red;
         width: 100%;
     }
 }
